--- a/app/build.gradle
+++ b/app/build.gradle
@@ -301,14 +301,16 @@ dependencies {
     //TODO viewmodel mvmw
 
     // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-viewmodel
-    runtimeOnly group: 'androidx.lifecycle', name: 'lifecycle-viewmodel', version: '2.5.0'
+    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel', version: '2.5.0'
 
 // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-viewmodel-savedstate
-    runtimeOnly group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-savedstate', version: '2.5.0'
+    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-savedstate', version: '2.5.0'
 
     // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-livedata
-    runtimeOnly group: 'androidx.lifecycle', name: 'lifecycle-livedata', version: '2.5.0'
+    implementation group: 'androidx.lifecycle', name: 'lifecycle-livedata', version: '2.5.0'
 
+// https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-extensions
+    implementation group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: '2.2.0'
 
 
 
