--- a/app/build.gradle
+++ b/app/build.gradle
@@ -311,6 +311,8 @@ dependencies {
 
 // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-extensions
     implementation group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: '2.2.0'
+    // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-extensions
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
 
 
